--- a/vscode-henna/package.json
+++ b/vscode-henna/package.json
@@ -1,13 +1,13 @@
 {
   "name": "henna",
-  "displayName": "Henna Color Theme",
-  "description": "Henna is a colour theme inspired by my green-eyed redhead girl. The colors are carefully selected with legibility and people with dyslexia in mind to create an accessible theme for Visual Studio Code",
-  "version": "0.11.0",
-  "publisher": "httpsterio",
-  "homepage": "http://httpster.io/vscode-henna",
+  "displayName": "Henna Greenified",
+  "description": "This is greenified version of original Henna color theme (https://github.com/httpsterio/vscode-henna)",
+  "version": "0.0.1",
+  "publisher": "alimushali",
+  "homepage": "https://github.com/alimushali/vscode-henna-greenified,
   "repository": {
     "type": "git",
-    "url": "https://github.com/httpsterio/vscode-henna"
+    "url": "https://github.com/alimushali/vscode-henna-greenified"
   },
   "galleryBanner": {
     "color": "#21272e",
@@ -29,9 +29,4 @@
       }
     ]
   },
-  "__metadata": {
-    "id": "e9b8479f-62ef-4613-83ea-2acfd2bb1cf0",
-    "publisherId": "73451000-cd83-4100-9266-8acc36ee8405",
-    "publisherDisplayName": "Sami Singh"
-  }
 }
